fix: change phone link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="contacts-list">
               <li>
                 <img src="./assets/images/phone.svg" alt="phone">
-                (380)67-981-80-54
+                <a href="tel:380679818054">(380)67-981-80-54</a>
               </li>
               <li>
                 <img src="./assets/images/gmail.svg" alt="gmail">
