fix: change facebook link
Change facebook link to correct

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </li>
               <li>
                 <img src="./assets/images/facebook.svg" alt="facebook">
-                <a href="https://www.facebook.com/Stanovyi/">Facebook</a>
+                <a href="https://www.facebook.com/Stanevoy">Facebook</a>
               </li>
               <li>
                 <img src="./assets/images/github.svg" alt="github">
